--- a/cli_test/module9/Makefile
+++ b/cli_test/module9/Makefile
@@ -1,5 +1,5 @@
 obj-m += sha2561.o
-sha2561-objs := sha256.o
+sha2561-y := sha256.o sha256_asm.o
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(shell pwd) modules
